--- a/index.ipynb
+++ b/index.ipynb
@@ -27,6 +27,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -36,11 +46,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 0 1 2]\n",
+      "[[2 0 7 2]\n",
+      " [6 8 9 0]\n",
+      " [7 8 6 9]\n",
+      " [6 2 3 9]]\n",
+      "[[4 6 1 9]\n",
+      " [4 9 7 9]\n",
+      " [1 0 5 9]\n",
+      " [5 9 9 0]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "A = np.random.randint(5, size=4)\n",
+    "B = np.random.randint(10, size=(4,4))\n",
+    "C = np.random.randint(10, size=(4,4))\n",
+    "\n",
+    "print(A)\n",
+    "print(B)\n",
+    "print(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[48 48 59 69]\n",
+      "[48 48 59 69]\n",
+      "[ True  True  True  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LHS\n",
+    "left = A.dot(B+C)\n",
+    "print(left)\n",
+    "\n",
+    "#RHS\n",
+    "right = A.dot(B) + A.dot(C)\n",
+    "print(right)\n",
+    "\n",
+    "print(left == right)"
    ]
   },
   {
@@ -53,11 +112,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 6 6]\n",
+      " [5 1 3]\n",
+      " [7 9 7]\n",
+      " [0 3 1]]\n",
+      "[[9 0]\n",
+      " [3 2]\n",
+      " [7 8]]\n",
+      "[[7 7 7]\n",
+      " [5 7 7]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here "
+    "A = np.random.randint(10, size=(4,3))\n",
+    "B = np.random.randint(10, size=(3,2))\n",
+    "C = np.random.randint(10, size=(2,3))\n",
+    "\n",
+    "print(A)\n",
+    "print(B)\n",
+    "print(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 972 1092 1092]\n",
+      " [ 613  665  665]\n",
+      " [1343 1491 1491]\n",
+      " [ 182  210  210]]\n",
+      "[[ 972 1092 1092]\n",
+      " [ 613  665  665]\n",
+      " [1343 1491 1491]\n",
+      " [ 182  210  210]]\n",
+      "[[ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LHS\n",
+    "left = A.dot(B.dot(C))\n",
+    "print(left)\n",
+    "\n",
+    "#RHS\n",
+    "right = (A.dot(B)).dot(C)\n",
+    "print(right)\n",
+    "\n",
+    "print(left == right)"
    ]
   },
   {
@@ -70,11 +187,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 3 7]\n",
+      " [9 9 4]\n",
+      " [7 5 9]\n",
+      " [6 7 5]]\n",
+      "[[0 1 9 3]\n",
+      " [1 7 8 6]\n",
+      " [1 7 5 2]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here "
+    "A = np.random.randint(10, size=(4,3))\n",
+    "B = np.random.randint(10, size=(3,4))\n",
+    "\n",
+    "print(A)\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 10  74  95  44]\n",
+      " [ 13 100 173  89]\n",
+      " [ 14 105 148  69]\n",
+      " [ 12  90 135  70]]\n",
+      "[[ 972 1092 1092]\n",
+      " [ 613  665  665]\n",
+      " [1343 1491 1491]\n",
+      " [ 182  210  210]]\n",
+      "False\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/natalia/anaconda3/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:6: DeprecationWarning: elementwise == comparison failed; this will raise an error in the future.\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "left = A.dot(B)\n",
+    "righ = B.dot(A)\n",
+    "\n",
+    "print(left)\n",
+    "print(right)\n",
+    "print(left == right)"
    ]
   },
   {
@@ -88,11 +261,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 2 9 7 4]\n",
+      "[2 8 3 1 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here "
+    "x = np.random.randint(10, size=5)\n",
+    "y = np.random.randint(10, size=5)\n",
+    "\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76\n",
+      "76\n"
+     ]
+    }
+   ],
+   "source": [
+    "left = (np.transpose(x)).dot(y)\n",
+    "print(left)\n",
+    "\n",
+    "right = (np.transpose(y).dot(x))\n",
+    "print(right)"
    ]
   },
   {
@@ -106,11 +314,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5 3 2 7]\n",
+      " [1 0 4 0]\n",
+      " [9 5 3 8]\n",
+      " [4 0 8 7]]\n",
+      "[[9 4 2 5]\n",
+      " [4 8 1 6]\n",
+      " [4 9 3 5]\n",
+      " [1 2 2 6]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here "
+    "A = np.random.randint(10, size=(4,4))\n",
+    "B = np.random.randint(10, size=(4,4))\n",
+    "\n",
+    "print(A)\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 72  25 121  75]\n",
+      " [ 76  40 119 102]\n",
+      " [ 33  14  48  46]\n",
+      " [ 95  25 138 102]]\n",
+      "[[ 72  25 121  75]\n",
+      " [ 76  40 119 102]\n",
+      " [ 33  14  48  46]\n",
+      " [ 95  25 138 102]]\n",
+      "[[ True  True  True  True]\n",
+      " [ True  True  True  True]\n",
+      " [ True  True  True  True]\n",
+      " [ True  True  True  True]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "left = np.transpose(A.dot(B))\n",
+    "print(left)\n",
+    "right = (np.transpose(B)).dot(np.transpose(A))\n",
+    "print(right)\n",
+    "print(left == right)"
    ]
   },
   {
@@ -139,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
